test/parser/positive/Int.java
public class Int {
  public Int() {}
  protected int x;
}
