test/parser/negative/OmittedFinalFieldInitializer.java

public class OmittedFinalFieldInitializer.java {
    public OmittedFinalFieldInitializer.java(){}
  protected final int x /* = 0 */;
}
